network_module/src/main/java/com/example/network_module/error/ErrorCode.kt
package com.example.network_module.error

object ErrorCode {

    const val RECEIPT_PICTURE_STORAGE_NOT_FOUNT = "RECEIPT_PICTURE_STORAGE_NOT_FOUNT"

    const val INTERNAL_SERVER_ERROR = "INTERNAL_SERVER_ERROR"

    const val UNKNOWN_ERROR = "UNKNOWN_ERROR"

    const val SERVICE_ERROR = "SERVICE_ERROR"

    const val UNAUTHORIZED = "SESSION_EXPIRED"

    const val USER_EXISTS = "USER_EXISTS"

    const val USER_NOT_FOUND = "USER_NOT_FOUND"

    const val BAD_CREDENTIALS = "BAD_CREDENTIALS"

    const val INCORRECT_PASSWORD = "INCORRECT_PASSWORD"

    const val PROFILE_IMAGE_NOT_FOUND = "PROFILE_IMAGE_NOT_FOUND"

    const val ACCOUNT_DISABLED = "LOGGED_IN_FAIL_MANY_TIME"

    const val IMG_UPLOAD_FAILED = "IMG_UPLOAD_FAILED"

    const val NO_INTERNET_CONNECTION = "NO_INTERNET_CONNECTION"

    const val SESSION_TIMED_OUT = "SESSION_TIMED_OUT"

}